--- a/ch9_shortest_path.ipynb
+++ b/ch9_shortest_path.ipynb
@@ -430,7 +430,9 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 자기 자신에서 다른 모든 학생과 성적 비교될 수 있으면(노드가 연결되어 있으면) 순위를 정확히 알 수 있음\n",
+    "* 제한 시간이 5초로 널널하므로 플로이드 시도\n",
+    "* => 플로이드 결과 리스트에서 해당 학생 번호의 행, 열을 모두 확인하여 모든 학생과 크든 작든 비교가 됐다면 순위를 특정 가능"
    ]
   },
   {
@@ -438,10 +440,65 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 플로이드 워셜 알고리즘을 사용하여 O(N^3)\n",
+    "* N은 최대 500이므로 5초 내에 해결 가능하다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 잘 풀었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 학생 수 N, 성적 비교 횟수 M 입력\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 10만을 무한에 해당하는 값으로 선언\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 성적 비교 결과 정보 입력(몇 번 비교해야 다른 학생에 도달할 수 있는지)\n",
+    "graph = [[INF] * (N+1) for _ in range(N+1)]\n",
+    "for _ in range(M):\n",
+    "    A, B = map(int, input().split())\n",
+    "    graph[A][B] = 1\n",
+    "\n",
+    "# 자기 자신과의 비교(0으로 초기화)\n",
+    "for i in range(1, N+1):\n",
+    "    graph[i][i] = 0\n",
+    "\n",
+    "# 플로이드 워셜 알고리즘 수행\n",
+    "for k in range(1, N+1):\n",
+    "    for a in range(1, N+1):\n",
+    "        for b in range(1, N+1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])\n",
+    "            \n",
+    "## 위와 같이 하면 graph의 결과는 총 몇 번의 비교를 통해 A번 학생과 B번 학생의 성적을 비교할 수 있는지가 담기게 됨.\n",
+    "## INF의 경우 해당 학생 간의 비교가 불가능한 경우고, 0인 경우는 자기 자신과의 비교인데 이는 비교가 가능하다고 처리한 셈.\n",
+    "\n",
+    "## 전체 학생 수에서 다른 모든 학생과의 비교는 불가능한 학생(순위를 특정할 수 없는 학생)을 빼서 정답을 구함 \n",
+    "# 전체 학생 수를 정답값으로 초기화\n",
+    "answer = N\n",
+    "# 특정 학생(t)이 다른 모든 학생(i)과 성적 비교가 가능한지 체크하기 위해 모든 학생에 대해 반복\n",
+    "for t in range(1, N+1):\n",
+    "    for i in range(1, N+1):\n",
+    "        # 서로 성적 비교한 기록이 없다면 순위를 특정할 수 없는 학생이므로 정답값에서 1을 빼주고 다음 학생을 체크하기 위해 break를 통해 다음 반복으로 넘어감\n",
+    "        if graph[t][i] == INF and graph[i][t] == INF:\n",
+    "          answer -= 1\n",
+    "          break\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(answer)"
    ]
   }
  ],
