--- a/ch9_shortest_path.ipynb
+++ b/ch9_shortest_path.ipynb
@@ -500,6 +500,281 @@
     "# 정답 출력\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q39. 화성 탐사 // RE(풀이 시간 초과)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 다익스트라 쓰면 될 것 같은데, bfs도 될 것 같은데? => 가 아니라 둘 다 써야하는 듯\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 기본적으로 O(ElogV)이긴 할 텐데, E는 최대 (125 ^ 2 * 4), V는 최대 125 ^ 2 가 된다. 1초 내에 해결이 가능하겠다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 다익스트라와 bfs를 섞는 느낌은 맞는데, visited를 만들지 않고 다익스트라의 기본 원리를 따라가는 게 더 효율적이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 우선 순위 큐 사용을 위해 heapq 임포트\n",
+    "import heapq\n",
+    "\n",
+    "# 상하좌우 4방향(연결 노드 체크를 위함) 선언 및 무한한 수를 표현하기 위해 10억을 할당\n",
+    "dx = [1, -1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 테스트 케이스의 수 T 입력 받아 반복\n",
+    "for tc in range(int(input())):\n",
+    "    \n",
+    "    # 탐사 공간 크기 N 입력\n",
+    "    N = int(input())\n",
+    "    \n",
+    "    # 탐사 공간 입력\n",
+    "    space = []\n",
+    "    for _ in range(N):\n",
+    "        space.append(list(map(int, input().split())))\n",
+    "    \n",
+    "    # 방문 여부 리스트와 최단 거리 결과 리스트 선언 및 초기화\n",
+    "    visited = [[False]*N for _ in range(N)]\n",
+    "    result = [[INF]*N for _ in range(N)]\n",
+    "    \n",
+    "    ## 다익스트라 알고리즘 수행\n",
+    "    # 우선 순위 큐 선언\n",
+    "    q = []\n",
+    "    \n",
+    "    # 우선 순위 큐에 시작 위치 정보를 넣고, 방문 여부 리스트의 시작점을 방문 처리\n",
+    "    heapq.heappush(q, [space[0][0], (0, 0)])\n",
+    "    visited[0][0] = True\n",
+    "    \n",
+    "    # 큐에 원소가 없을 때까지\n",
+    "    while q:\n",
+    "        # 최단 거리가 가장 가까운 노드를 선택\n",
+    "        cost, pos = heapq.heappop(q)\n",
+    "        # 노드의 좌표 선언\n",
+    "        x, y = pos\n",
+    "        \n",
+    "        # 해당 노드의 상하좌우에 있는 노드를 체크(간선으로 연결된 노드를 체크)\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "\n",
+    "            # 맵 밖을 벗어나는 경우 무시\n",
+    "            if nx < 0 or nx >= N or ny < 0 or ny >= N or visited[nx][ny]:\n",
+    "                continue\n",
+    "            \n",
+    "            # 현재 연결 노드까지의 최단거리 값과 해당 노드를 거쳐 연결 노드에 도달하는 거리값 중 작은 것으로 갱신하고, 방문 처리 및 큐에 삽입\n",
+    "            result[nx][ny] = min(space[nx][ny] + cost, result[nx][ny])\n",
+    "            visited[nx][ny] = True\n",
+    "            heapq.heappush(q, [result[nx][ny], (nx, ny)])\n",
+    "    \n",
+    "    # 정답 출력\n",
+    "    print(result[N-1][N-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참조"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "INF = int(1e9) # 무한을 의미하는 값으로 10억을 설정\n",
+    "\n",
+    "dx = [-1, 0, 1, 0]\n",
+    "dy = [0, 1, 0, -1]\n",
+    "\n",
+    "# 전체 테스트 케이스만큼 반복\n",
+    "for tc in range(int(input())):\n",
+    "    # 노드의 개수를 입력받기\n",
+    "    n = int(input())\n",
+    "    \n",
+    "    # 전체 맵 정보를 입력 받기\n",
+    "    graph = []\n",
+    "    for i in range(n):\n",
+    "        graph.append(list(map(int, input().split())))\n",
+    "        \n",
+    "    # 최단 거리 테이블을 모두 무한으로 초기화\n",
+    "    distance = [[INF]* n for _ in range(n)]\n",
+    "    \n",
+    "    x, y = 0, 0 # 시작 위치는 (0, 0)\n",
+    "    # 시작 노드로 가기 위한 비용은 (0, 0) 위치의 값으로 설정하여, 큐에 삽입\n",
+    "    q = [(graph[x][y], x, y)]\n",
+    "    distance[x][y] = graph[x][y]\n",
+    "    \n",
+    "    \n",
+    "    # 다익스트라 알고리즘 수행\n",
+    "    while q:\n",
+    "        # 가장 최단 거리가 짧은 노드에 대한 정보를 꺼내기\n",
+    "        dist, x, y = heapq.heappop(q)\n",
+    "        # 현재 노드가 이미 처리된 적이 있는 노드라면 무시\n",
+    "        if distance[x][y] < dist:\n",
+    "            continue\n",
+    "        # 현재 노드와 연결된 다른 인접한 노드들을 확인\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            # 맵의 범위를 벗어나는 경우 무시\n",
+    "            if nx < 0 or nx >= n or ny < 0 or ny >= n:\n",
+    "                continue\n",
+    "            cost = dist + graph[nx][ny]\n",
+    "            # 현재 노드를 거쳐서, 다른 노드로 이동하는 거리가 더 짧은 경우\n",
+    "            if cost < distance[nx][ny]:\n",
+    "                distance[nx][ny] = cost\n",
+    "                heapq.heappush(q, (cost, nx, ny))\n",
+    "\n",
+    "print(distance[n-1][n-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q40. 숨바꼭질"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 다익스트라 이용하여 최단 거리가 가장 먼 헛간을 구하자\n",
+    "* 그 헛간과 같은 거리를 갖는 헛간의 개수를 구하라는 게 그걸 포함한 건지 제외한 건지 헷갈릴 소지가 있는 듯."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 다익스트라를 이용하여 O(ElogV).\n",
+    "* 문제에서 N, M이 각각 V, E에 해당한다. N의 최댓값은 20,000이고 M의 최댓값은 50,000이므로 시간 내에 해결 가능하다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 거리가 1이기 때문에 BFS로도 할 수 있다고 함.\n",
+    "* 잘 풀었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "# 헛간 개수 N, 통로 개수 M 입력\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 통로 정보 입력\n",
+    "graph = [[] for _ in range(N+1)]\n",
+    "for _ in range(M):\n",
+    "    A, B = map(int, input().split())\n",
+    "    graph[A].append(B)\n",
+    "    graph[B].append(A)\n",
+    "\n",
+    "# 무한을 나타내기 위한 수로 10억을 할당\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 최단 거리 테이블 선언 및 초기화. 시작 노드에서의 값은 0으로 초기화\n",
+    "shortest = [INF] * (N+1)\n",
+    "shortest[1] = 0\n",
+    "\n",
+    "# 우선순위큐 선언 및 시작 노드 삽입\n",
+    "q = []\n",
+    "heapq.heappush(q, (0, 1))\n",
+    "\n",
+    "## 다익스트라 알고리즘 수행\n",
+    "# q에 원소가 없을 때까지 반복\n",
+    "while q:\n",
+    "    # 최단 거리가 가장 작은 노드 선택\n",
+    "    dist, now = heapq.heappop(q)\n",
+    "    \n",
+    "    # 해당 노드가 이미 처리한 노드라면(이미 최단 거리 값으로 갱신했다면) 무시\n",
+    "    if shortest[now] < dist:\n",
+    "        continue\n",
+    "    \n",
+    "    # 해당 노드와 연결된 모든 노드를 살피기 위해 반복\n",
+    "    for next in graph[now]:\n",
+    "        # 해당 노드를 거쳐 다음 노드를 가는 경우의 거리 선언\n",
+    "        cost = dist + 1\n",
+    "        \n",
+    "        # 해당 거리가 기존 다음 노드의 최단 거리보다 짧다면 최단 거리 갱신 및 큐에 삽입\n",
+    "        if cost < shortest[next]:\n",
+    "            shortest[next] = cost\n",
+    "            heapq.heappush(q, (cost, next))\n",
+    "\n",
+    "# 숨을 헛간, 그 헛간까지의 거리, 그 헛간과 같은 거리를 갖는 헛간 수 초기화\n",
+    "shed = N\n",
+    "shed_dist = 0\n",
+    "shed_count = 1\n",
+    "\n",
+    "# 모든 헛간을 확인하며\n",
+    "for i in range(1, N+1):\n",
+    "    # 지금 확인하는 헛간까지의 최단 거리가 현재 저장된 최단 거리보다 길다면 헛간과 그 거리를 갱신하고 같은 거리를 갖는 헛간 수 초기화\n",
+    "    if shortest[i] > shed_dist:\n",
+    "        shed = i\n",
+    "        shed_dist = shortest[i]\n",
+    "        shed_count = 1\n",
+    "    # 지금 확인하는 헛간까지의 최단 거리가 현재 저장된 최단 거리와 같다면 같은 거리를 갖는 헛간 수에 1을 더함\n",
+    "    elif shortest[i] == shed_dist:\n",
+    "        shed_count += 1\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(shed, shed_dist, shed_count)"
+   ]
   }
  ],
  "metadata": {
