resolve ch10_ex3

--- a/ch10_graph.ipynb
+++ b/ch10_graph.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 커리큘럼"
+    "### 커리큘럼 // RE(해결 못 함)"
    ]
   },
   {
@@ -283,7 +283,11 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 선수 강의의 개수가 적은 것부터 확인한다.\n",
+    "* 어떤 강의의 선수 강의 중 indegree가 같은 레벨에 있는 강의가 여러 개라면 그 중에 가장 시간이 오래 걸리는 것만 시간에 추가한다.\n",
+    "* 어떤 강의의 시간을 체크할 때 선수 강의 목록에 선수 강의와 선수 강의의 선수 강의가 함께 들어있다면, 후자의 시간을 중복 체크하지 않도록 한다.\n",
+    "\n",
+    "* 근데 여기선 상위 강의의 정보에 선수 강의가 들어가 있어서 거꾸로 봐야할 것 같은데... => 방향을 뒤집어서 기본 코드와 비슷하게 가보자"
    ]
   },
   {
@@ -291,11 +295,137 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 해설 코드 기준 최악의 경우엔 O(N!)이 되지 않나? N번 강의가 1번부터 N-1번까지를 모두 선수 과목으로 한다면 간선이 그렇게 될 것 같은데\n",
+    "    * 아니구나. 노드 N개일 때, 간선은 N(N-1)/2이 최대가 되겠네. 그러면 O(N^3)이고 N은 최대 500이니까 해결 가능이겠다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 너무 어렵게 생각했나... 그리고 스스로가 답이라고 생각한 방식에 확신이 없고 구체화를 못해서 금방 포기해버린 건 아닌가 싶다.\n",
+    "* 상위 강의 -> 하위 강의의 형태로 입력이 주어지므로, 위상 정렬 알고리즘 사용을 위해 이를 뒤집어줘야 한다. 생각은 했는데, 다른 좋은 방법이 있지 않을까 하며 시도를 안 해봤다...\n",
+    "* 특히 같은 차수에서 둘 다 선수 과목으로 하는 과목이 있을 경우 더 많은 시간이 걸리는 것을 채택해야 하는데 그 부분을 어떻게 구현할지 막막했다. 해설에서는 똑같이 위상정렬을 돌되, max()를 이용하여 그 부분을 체크해줬다.\n",
+    "* 모르겠으면 그냥 많이 풀어보는 게 장땡인 건 맞을 것 같다. 정진합시다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 10, 10, 4, 4, 3]\n",
+      "[[], [], [1], [1], [3, 1], [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "# 듣고자 하는 강의 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "\n",
+    "course_times = [0] * (N+1) # 각 강의의 소요 시간\n",
+    "graph = [[] for _ in range(N+1)]\n",
+    "indegrees = [0] * (N+1)\n",
+    "\n",
+    "# 강의 시간 및 선수 강의 정보 입력\n",
+    "for i in range(1, N+1):\n",
+    "    time, *precourse = map(int, input().split())\n",
+    "    course_times[i] = time\n",
+    "    for p in precourse[:-1]:\n",
+    "        graph[p].append(i)\n",
+    "        indegrees[i] += 1\n",
+    "\n",
+    "shortest_time = [0] * (N+1)\n",
+    "\n",
+    "q = deque()\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    if indegrees[i] == 0:\n",
+    "        q.append(i)\n",
+    "        \n",
+    "while q:\n",
+    "    course = q.popleft()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import copy\n",
+    "\n",
+    "# 노드 개수 입력\n",
+    "v = int(input())\n",
+    "# 모든 노드에 대한 진입차수를 0으로 초기화\n",
+    "indegree = [0] * (v+1)\n",
+    "# 각 노드에 연결된 간선 정보를 담기 위한 연결 리스트(그래프) 초기화\n",
+    "graph = [[] for i in range(v+1)]\n",
+    "# 각 강의 시간을 0으로 초기화\n",
+    "time = [0] * (v+1)\n",
+    "\n",
+    "# 방향 그래프의 모든 간선 정보를 입력받기\n",
+    "for i in range(1, v+1):\n",
+    "    data = list(map(int, input().split()))\n",
+    "    time[i] = data[0] # 첫 번째 수는 시간 정보를 담고 있음\n",
+    "    for x in data[1:-1]:\n",
+    "        indegree[i] += 1\n",
+    "        graph[x].append(i) ## 여기도 키포인트\n",
+    "        \n",
+    "# 위상 정렬 함수\n",
+    "def topology_sort():\n",
+    "    result = copy.deepcopy(time) # 알고리즘 수행 결과를 담을 리스트\n",
+    "    q = deque() # 큐 기능을 위한 deque 라이브러리 사용\n",
+    "    \n",
+    "    # 처음 시작할 때는 진입차수가 0인 노드를 큐에 삽입\n",
+    "    for i in range(1, v + 1):\n",
+    "        if indegree[i] == 0:\n",
+    "            q.append(i)\n",
+    "            \n",
+    "    # 큐가 빌 때까지 반복\n",
+    "    while q:\n",
+    "        # 큐에서 원소 꺼내기\n",
+    "        now = q.popleft()\n",
+    "        # 해당 원소와 연결된 노드들의 진입차수에서 1 빼기\n",
+    "        for i in graph[now]:\n",
+    "            result[i] = max(result[i], result[now] + time[i]) ## 여기가 키포인트라고 생각한다.\n",
+    "            indegree[i] -= 1\n",
+    "            # 새롭게 진입차수가 0이 되는 노드를 큐에 삽입\n",
+    "            if indegree[i] == 0:\n",
+    "                q.append(i)\n",
+    "                \n",
+    "    # 위상 정렬 수행 결과 출력\n",
+    "    for i in range(1, v+1):\n",
+    "        print(result[i])\n",
+    "\n",
+    "topology_sort()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
