--- a/ch10_graph.ipynb
+++ b/ch10_graph.ipynb
@@ -418,7 +418,154 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Q41. 여행 계획"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 여행 계획이 가능하려면 여행 계획 내의 모든 여행지가 한 그룹에 있어야 한다 => 루트 노드가 같아야 한다.\n",
+    "* 여행지 연결 여부가 인접 행렬로 들어오니 이를 인접 리스트의 형태로 바꿔주고, 인접 행렬을 받아올 때 중복이 생기므로 전체 리스트 내 원소는 set으로 구성하여 중복을 없앤다.\n",
+    "* 여행 계획 내 도시들이 모두 연결되어 있어야(루트 노드가 모두 같아야) 여행 계획이 가능하므로 첫 번째 노드의 루트 노드를 기록하여 다른 노드들의 루트 노드와 비교하여 루트 노드가 서로 다른 경우 NO, 모두 같은 경우는 YES를 출력한다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 경로 압축 이용한 서로소 집합 알고리즘의 시간 복잡도는 $O(N + {find 연산 개수}(1+\\log_{2-{find 연산 개수}/N}N))$라고 한다.\n",
+    "* N은 최대 500이고, find 연산 개수도 최대 4N 정도일 것이므로 시간 내에 해결이 가능하다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 잘 풀었다.\n",
+    "* 답지에서는 여행 계획 내 여행지의 모든 루트 노드가 동일한지 체크할 때 확인하는 노드와 그 다음 노드의 루트 노드가 같은지 비교를 반복하며 체크했다.\n",
+    "    * 또한 답지에서는 비교할 때도 루트 노드를 찾을 때 find 함수를 썼는데, 어차피 union과정에서 다 갱신되어 그냥 루트 노드 리스트에서 뽑아오는 것과 같겠지만, 이게 더 안전할 것 같긴 하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 루트 노드 찾는 함수 선언\n",
+    "def find_root(roots, node):\n",
+    "    if roots[node] != node:\n",
+    "        roots[node] = find_root(roots, roots[node])\n",
+    "    return roots[node]\n",
+    "\n",
+    "# 두 노드의 루트 노드를 같게하여 같은 묶음으로 묶는 함수 선언\n",
+    "def union_root(roots, a, b):\n",
+    "    root_a = find_root(roots, a)\n",
+    "    root_b = find_root(roots, b)\n",
+    "    \n",
+    "    if root_a < root_b:\n",
+    "        roots[root_b] = root_a\n",
+    "    else:\n",
+    "        roots[root_a] = root_b\n",
+    "\n",
+    "# 여행지 수 N, 여행 계획에 속한 도시 수 M 입력\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 각 여행지의 루트 노드는 자기 자신으로 초기화\n",
+    "roots = [i for i in range(N+1)]\n",
+    "\n",
+    "# 여행지 연결 정보 입력\n",
+    "for i in range(1, N+1):\n",
+    "    row = list(map(int, input().split()))\n",
+    "    for j in range(N):\n",
+    "        # 연결돼있는 도시들은 그때그때 union을 통해 루트노드를 같게 하여 한 그룹으로 만들어주기\n",
+    "        if row[j] == 1:\n",
+    "            union_root(roots, i, j+1)\n",
+    "\n",
+    "# 여행 계획 정보 입력\n",
+    "travel_plan = list(map(int, input().split()))\n",
+    "\n",
+    "# 여행 계획의 첫 번째 도시의 루트 노드를 할당\n",
+    "travle_root = roots[travel_plan[0]]\n",
+    "# 플래그 변수 선언\n",
+    "flag = True\n",
+    "\n",
+    "# 두 번째 도시부터 확인하며\n",
+    "for node in travel_plan[1:]:\n",
+    "    # 첫 번째 도시의 루트 노드와 확인하는 도시의 루트 노드가 다른 경우\n",
+    "    if roots[node] != travle_root:\n",
+    "        # 플래그 변수를 False로 바꾸고 반복 중지\n",
+    "        flag = False\n",
+    "        break\n",
+    "# 반복이 종료됐을 때 플래그 변수가 True라면 모든 도시의 루트 노드가 같아 연결되어 있다는 뜻이므로 YES 출력, 아니라면 NO 출력\n",
+    "else:\n",
+    "    if flag == True: ## 그냥 if flag: 만 해도 됨\n",
+    "        print('YES')\n",
+    "    else:\n",
+    "        print('NO')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고(루트 노드 비교 부분)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(M-1):\n",
+    "    if find_root(roots, travel_plan[i]) != find_root(roots, travel_plan(i+1)):\n",
+    "        flag = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q42. 탑승구"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 50분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
   },
   {
    "cell_type": "code",
